implemented the upload of data, countdown and start panel for hackthons

--- a/competition.html
+++ b/competition.html
@@ -50,12 +50,12 @@
     </nav>
   </header>
 
-  
+
   <h1>Hackathons</h1>
   <div class="main-top">
     <p>filter</p>
     <p>search</p>
-    <p>sort</p> 
+    <p>sort</p>
   </div>
   <main>
     <div class="leftbar">
@@ -85,7 +85,7 @@
         </form>
       </div>
     </div>
-    
+
     <div class="card-grid-competition">
       <div class="card">
         <div class="image-content">
@@ -99,7 +99,9 @@
           <p class="rules">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In ac turpis sit amet sapien posuere
             porttitor.Quisque ultrices at magna ut pharetra. Morbi porttitor sodales dolor, id feugiat purus dignissim.
           </p>
-          <button class="button">View more</button>
+          <a href="hackhaton-site-pattern.html?id=1">
+            <button class="button">View more</button>
+          </a>
           <!-- <div class="label">&#xB7; Скоро буде</div> -->
           <!-- <p class="addres">США, Нью йорк, РТІ</p> -->
           <!-- <p class="prize">&#36;<strong style="color: black;"> 275 </strong>in prizes</p> -->
@@ -119,7 +121,9 @@
           <p class="rules">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In ac turpis sit amet sapien posuere
             porttitor. Quisque ultrices at magna ut pharetra. Morbi porttitor sodales dolor, id feugiat purus dignissim.
           </p>
-          <button class="button">View more</button>
+          <a href="hackhaton-site-pattern.html?id=2">
+            <button class="button">View more</button>
+          </a>
         </div>
       </div>
       <!-- <p class="addres">Онлайн</p> -->
@@ -139,7 +143,9 @@
           <p class="rules">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In ac turpis sit amet sapien posuere
             porttitor.
             Quisque ultrices at magna ut pharetra. Morbi porttitor sodales dolor, id feugiat purus dignissim.</p>
-          <button class="button">View more</button>
+          <a href="hackhaton-site-pattern.html?id=3">
+            <button class="button">View more</button>
+          </a>
         </div>
         <!-- <p class="addres">Онлайн</p> -->
         <!-- <p class="prize">&#36;<strong style="color: black;"> 25,000 </strong>in prizes</p> -->
@@ -157,8 +163,9 @@
           <p class="rules">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In ac turpis sit amet sapien posuere
             porttitor.
             Quisque ultrices at magna ut pharetra. Morbi porttitor sodales dolor, id feugiat purus dignissim.</p>
-          <button class="button">View more</button>
-
+          <a href="hackhaton-site-pattern.html?id=4">
+            <button class="button">View more</button>
+          </a>
           <!-- <p class="addres">Онлайн</p> -->
           <!-- <p class="prize">&#36;<strong style="color: black;"> 10,000 </strong>in prizes</p> -->
         </div>
@@ -176,7 +183,9 @@
           <p class="rules">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In ac turpis sit amet sapien posuere
             porttitor.
             Quisque ultrices at magna ut pharetra. Morbi porttitor sodales dolor, id feugiat purus dignissim.</p>
-          <button class="button">View More</button>
+          <a href="hackhaton-site-pattern.html?id=5">
+            <button class="button">View more</button>
+          </a>
 
           <!-- <p class="addres">Онлайн</p> -->
           <!-- <p class="prize">&#36; <strong style="color: black;"> 1,000 </strong>in prizes</p> -->
@@ -194,10 +203,12 @@
           <p class="name">Nova Hacks III</p>
           <p class="theme">Blockchain, Fintech</p>
           <p class="date">09.02-09.03</p>
-          <button class="button">View More</button>
           <p class="rules">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In ac turpis sit amet sapien posuere
             porttitor.
             Quisque ultrices at magna ut pharetra. Morbi porttitor sodales dolor, id feugiat purus dignissim.</p>
+          <a href="hackhaton-site-pattern.html?id=1">
+            <button class="button">View more</button>
+          </a>
 
           <!-- <p class="addres">Онлайн</p> -->
           <!-- <p class="prize">&#36;<strong style="color: black;"> 0 </strong>in prizes</p> -->
