--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 
   </main>
 
-  <footer id="footer">
+  <footer>
     <div class="inner-footer">
       <div class="foooter-third">
         <div class="logo-container">
