--- a/hackhaton-site-pattern.html
+++ b/hackhaton-site-pattern.html
@@ -11,6 +11,9 @@
 
   <link rel="stylesheet" href="style/general.css">
   <link rel="stylesheet" href="style/topbar.css">
+  <link rel="stylesheet" href="style/hackathon.css">
+  <link rel="stylesheet" href="style/foooter.css">
+
   <title>Hackathon</title>
 </head>
 
@@ -49,35 +52,91 @@
   </header>
 
   <main>
-    <section class="first-section">
+
+    <div class="hackathon-detail-container" id="hackathon-detail-container">
+      <!-- Деталі хакатону будуть додаватися тут через JS -->
+    </div>
+
+    <!-- <div class="preview">
       <div class="left-side">
         <h1 class="title"></h1>
         <img class="hackathon-image" src="images/image1.png">
-        <div class="timer">timer</div>
+
+        <div class="countdown-box">
+          <div class="countdown">
+            <h3 id="days">00</h3>
+            <p>Days</p>
+          </div>
+          <div class="countdown">
+            <h3 id="hours">00</h3>
+            <p>Hours</p>
+          </div>
+          <div class="countdown">
+            <h3 id="minutes">00</h3>
+            <p>Minutes</p>
+          </div>
+          <div class="countdown">
+            <h3 id="seconds">00</h3>
+            <p>Seconds</p>
+          </div>
+        </div>
+
         <button class="join-button">Join hackathon</button>
       </div>
 
       <div class="right-side">
         <div class="hackathon-info">
-          <p class="hackathon-date">Deadline: </p>
+          <p class="deadline">Deadline: </p>
           <hr>
-          <p class="location">locatio</p>
+          <p class="location">location</p>
           <p class="prize">prize</p>
           <p class="theme">theme</p>
           <p class="hackathon-organizer">organizer</p>
         </div>
       </div>
-    </section>
-    <section class="second-section">
-      <p class="rules">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum totam, exercitationem amet facere iusto quam sunt? Deleniti deserunt accusamus eveniet consectetur, minus dolorum placeat amet cumque ipsa enim optio dolores perferendis saepe distinctio nemo impedit consequatur molestiae. Consequatur, quisquam. Quisquam, culpa! Nam autem temporibus itaque distinctio est eos aut praesentium rerum nisi alias quibusdam modi aliquam iusto, non repellendus laudantium minus incidunt aperiam. Magni error ducimus enim nam nostrum distinctio perspiciatis, debitis commodi a ut eligendi aut quaerat placeat optio dolor numquam quisquam! Pariatur quae laborum amet iure, natus nemo tenetur, dolorum debitis sapiente, at quasi placeat impedit repellat dicta labore modi aperiam asperiores quod esse consequatur? Placeat, cupiditate quisquam magnam porro eveniet numquam hic iure doloribus provident dolorem dicta id commodi ex, tempora neque. Quas nobis expedita nemo, dolorem laborum laboriosam aspernatur illo iusto? Temporibus vitae neque deleniti blanditiis atque labore distinctio at nihil architecto ipsam illo, nemo nesciunt, quas corporis qui provident maiores consequatur. Ipsam quod vitae inventore debitis iusto iste incidunt tempora. Earum quam quod sit ad, temporibus, odio quos dolorem culpa deserunt commodi neque tenetur cupiditate necessitatibus dicta? Nobis quidem inventore, eum cumque libero consequuntur, fuga, ex aliquid doloribus maxime natus adipisci temporibus qui doloremque dignissimos hic non. At ullam dolore dolor eum aperiam distinctio commodi ducimus quam sapiente dignissimos nisi assumenda, eius odio porro consequuntur molestias dolorum laudantium dicta. Ullam fuga alias quibusdam explicabo ducimus unde, dicta ut tempore adipisci atque quam voluptas eum. Vel voluptatibus officia expedita provident earum corporis exercitationem harum mollitia, incidunt illo odio, facilis eligendi reiciendis fuga ratione officiis cumque neque soluta, recusandae possimus ex voluptatem assumenda? Reiciendis assumenda vel, facere recusandae, dolores cupiditate temporibus soluta sed dolor doloremque maiores saepe fugit tempora aliquam ipsum consectetur commodi sequi placeat animi pariatur quod accusamus dolorum libero? Omnis harum illum ex ad error?</p>
-    </section>
-    <!-- <div class="hackathon-detail-container" id="hackathon-detail-container"> -->
-    <!-- Деталі хакатону будуть додаватися тут через JS -->
+
     </div>
 
-    <!-- <script src="js/hackathon-details.js"></script> -->
 
+    <section class="second-section">
+      <p class="description"></p>
+      <p class="rules"></p>
+    </section>
+    </div> -->
+
+
+    <footer>
+      <div class="inner-footer">
+        <div class="foooter-third">
+          <div class="logo-container">
+            <img src="images/star.png">
+          </div>
+        </div>
+  
+        <div class="footer-third">
+          <h1>USEFUL LINKS</h1>
+          <a href="#">About</a>
+          <a href="#">Services</a>
+          <a href="#">Contact</a>
+          <a href="#">Shop</a>
+          <a href="#">Blog</a>
+        </div>
+  
+        <div class="footer-third">
+          <h1>CONTACT</h1>
+          <a href="#">INST: marta</a>
+          <a href="#">FB: marta</a>
+          <a href="https://github.com/irlknn" target="_blank">Github: irlknn</a>
+          <p>© 2025 site</p>
+        </div>
+      </div>
+    </footer>
+  
   </main>
+  
+  <!-- <script src="js/countdown.js"></script> -->
+  <script src="js/hackathon-details.js"></script>
 </body>
+
 
 </html>
