--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             <img src="images/image3.png" class="card-img">
           </div>
           <div class="card-content">
-            <h2 class="name">AAAA</h2>
+            <h2 class="name">Hackathon</h2>
             <p class="theme">Web development</p>
             <p class="date">18.02-28.05</p>
             <p class="rules">Lorem, ipsum dolor sit amet consectetur adipisicing elit. At iste aperiam deserunt
@@ -151,7 +151,7 @@
       </div>
     </section>
 
-    <h1>Top participants</h1>
+    <h1>Leaderboard</h1>
 
     <div class="wrapper">
       <div class="lboard_section">
