--- a/person-account.html
+++ b/person-account.html
@@ -140,10 +140,10 @@
       </div>
 
       <div id="In_process" class="tabcontent">
-        <div class="content-wrapper">
+        <div class="content-wrapper" id="content-wrapper">
 
-          <div class="card-grid">
-            <div class="card">
+          <!-- <div class="card-grid" id="in_process-container"> -->
+            <!-- <div class="card">
               <div class="image-content">
                 <span class="overlay"></span>
                 <img src="images/image1.png" class="card-img">
@@ -160,11 +160,11 @@
                 <button class="button">View more</button>
                 <!-- <div class="label">&#xB7; Скоро буде</div> -->
                 <!-- <p class="addres">США, Нью йорк, РТІ</p> -->
-                <!-- <p class="prize">&#36;<strong style="color: black;"> 275 </strong>in prizes</p> -->
+                <!-- <p class="prize">&#36;<strong style="color: black;"> 275 </strong>in prizes</p> 
               </div>
 
-            </div>
-          </div>
+            </div> -->
+          <!-- </div> -->
         </div>
       </div>
 
@@ -288,7 +288,9 @@
     </div>
   </footer>
 
+  <script src="js/hackathon-details.js"></script>
   <script src="js/account_tabs.js"></script>
+  <script src="js/toggle-menu.js"></script>
 </body>
 
 </html>
