--- a/competition.html
+++ b/competition.html
@@ -8,8 +8,7 @@
 
   <link rel="stylesheet" href="style/general.css">
   <link rel="stylesheet" href="style/topbar.css">
-  <link rel="stylesheet" href="style/new_hachathos-card.css">
-  <!-- <link rel="stylesheet" href="style/hacaton-cards.css"> -->
+  <link rel="stylesheet" href="style/hachathon-card.css">
   <link rel="stylesheet" href="style/competition.css">
   <link rel="stylesheet" href="style/foooter.css">
 
@@ -57,7 +56,7 @@
     <div class="filter" onclick="toggleMenu()"><img src="https://static.thenounproject.com/png/4800805-200.png">Filters</div>
     <input type="text" placeholder="Search" class="search">
     <div class="dropdown">
-      <p class="sort-details">sort by</p>
+      <p class="sort-details">sort by &#8595;</p>
       <div class="dropdown-content">
         <a href="#">By 1</a>
         <a href="#">By 2</a>
@@ -216,7 +215,7 @@
           <p class="rules">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In ac turpis sit amet sapien posuere
             porttitor.
             Quisque ultrices at magna ut pharetra. Morbi porttitor sodales dolor, id feugiat purus dignissim.</p>
-          <a href="hackhaton-site-pattern.html?id=6">
+          <a href="hackhaton-site-pattern.html?id=1">
             <button class="button">View more</button>
           </a>
 
