--- a/hackhaton-site-pattern.html
+++ b/hackhaton-site-pattern.html
@@ -54,87 +54,38 @@
   <main>
 
     <div class="hackathon-detail-container" id="hackathon-detail-container">
-      <!-- Деталі хакатону будуть додаватися тут через JS -->
+      <!-- Деталі хакатону завантажуються через JS -->
     </div>
 
-    <!-- <div class="preview">
-      <div class="left-side">
-        <h1 class="title"></h1>
-        <img class="hackathon-image" src="images/image1.png">
-
-        <div class="countdown-box">
-          <div class="countdown">
-            <h3 id="days">00</h3>
-            <p>Days</p>
-          </div>
-          <div class="countdown">
-            <h3 id="hours">00</h3>
-            <p>Hours</p>
-          </div>
-          <div class="countdown">
-            <h3 id="minutes">00</h3>
-            <p>Minutes</p>
-          </div>
-          <div class="countdown">
-            <h3 id="seconds">00</h3>
-            <p>Seconds</p>
-          </div>
-        </div>
-
-        <button class="join-button">Join hackathon</button>
-      </div>
-
-      <div class="right-side">
-        <div class="hackathon-info">
-          <p class="deadline">Deadline: </p>
-          <hr>
-          <p class="location">location</p>
-          <p class="prize">prize</p>
-          <p class="theme">theme</p>
-          <p class="hackathon-organizer">organizer</p>
-        </div>
-      </div>
-
-    </div>
-
-
-    <section class="second-section">
-      <p class="description"></p>
-      <p class="rules"></p>
-    </section>
-    </div> -->
-
-
-    <footer>
-      <div class="inner-footer">
-        <div class="foooter-third">
-          <div class="logo-container">
-            <img src="images/star.png">
-          </div>
-        </div>
-  
-        <div class="footer-third">
-          <h1>USEFUL LINKS</h1>
-          <a href="#">About</a>
-          <a href="#">Services</a>
-          <a href="#">Contact</a>
-          <a href="#">Shop</a>
-          <a href="#">Blog</a>
-        </div>
-  
-        <div class="footer-third">
-          <h1>CONTACT</h1>
-          <a href="#">INST: marta</a>
-          <a href="#">FB: marta</a>
-          <a href="https://github.com/irlknn" target="_blank">Github: irlknn</a>
-          <p>© 2025 site</p>
-        </div>
-      </div>
-    </footer>
-  
   </main>
-  
-  <!-- <script src="js/countdown.js"></script> -->
+
+  <footer>
+    <div class="inner-footer">
+      <div class="foooter-third">
+        <div class="logo-container">
+          <img src="images/star.png">
+        </div>
+      </div>
+
+      <div class="footer-third">
+        <h1>USEFUL LINKS</h1>
+        <a href="#">About</a>
+        <a href="#">Services</a>
+        <a href="#">Contact</a>
+        <a href="#">Shop</a>
+        <a href="#">Blog</a>
+      </div>
+
+      <div class="footer-third">
+        <h1>CONTACT</h1>
+        <a href="#">INST: marta</a>
+        <a href="#">FB: marta</a>
+        <a href="https://github.com/irlknn" target="_blank">Github: irlknn</a>
+        <p>© 2025 site</p>
+      </div>
+    </div>
+  </footer>
+
   <script src="js/hackathon-details.js"></script>
 </body>
 
