--- a/person-account.html
+++ b/person-account.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="style/topbar.css">
   <link rel="stylesheet" href="style/account.css">
   <link rel="stylesheet" href="style/account_topbar.css">
-  <link rel="stylesheet" href="style/new_hachathos-card.css">
+  <link rel="stylesheet" href="style/hachathon-card.css">
   <link rel="stylesheet" href="style/foooter.css">
 
   <meta charset="UTF-8">
@@ -24,36 +24,6 @@
 </head>
 
 <body>
-  <!-- <nav class="nav-menu">
-      <div class="home">
-        <a href="index.html">
-          <img src="images/star.png">
-          Home
-        </a>
-      </div>
-
-      <ul class="nav-list">
-        <li class="list-item">
-          <a href="competition.html">
-            Hackathons
-          </a>
-        </li>
-
-        <li class="list-item">
-          <a href="person-account.html">
-            My account
-          </a>
-        </li>
-
-        <li class="list-item">
-          <a href="rating.html">
-            Rating
-          </a>
-        </li>
-
-      </ul>
-    </nav> -->
-
   <header class="navigation">
     <div class="account_home">
       <a href="index.html">
@@ -127,7 +97,6 @@
       </div>
 
       <div id="Active" class="tabcontent">
-        <!-- Додати Динамічне завантаження даних -->
         <div class="no-content">
           <img src="https://i.pinimg.com/736x/54/9c/10/549c10713685a3162b9f71387c7f1914.jpg" class="no-content">
           <h3>No active applications</h3>
@@ -141,30 +110,7 @@
 
       <div id="In_process" class="tabcontent">
         <div class="content-wrapper" id="content-wrapper">
-
-          <!-- <div class="card-grid" id="in_process-container"> -->
-            <!-- <div class="card">
-              <div class="image-content">
-                <span class="overlay"></span>
-                <img src="images/image1.png" class="card-img">
-              </div>
-              <div class="card-content">
-                <h2 class="name">WcHacks</h2>
-                <p class="theme">Robotic Process Automation</p>
-                <p class="date">01.03-02.03, 2025</p>
-                <p class="rules">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In ac turpis sit amet sapien
-                  posuere
-                  porttitor.Quisque ultrices at magna ut pharetra. Morbi porttitor sodales dolor, id feugiat purus
-                  dignissim.
-                </p>
-                <button class="button">View more</button>
-                <!-- <div class="label">&#xB7; Скоро буде</div> -->
-                <!-- <p class="addres">США, Нью йорк, РТІ</p> -->
-                <!-- <p class="prize">&#36;<strong style="color: black;"> 275 </strong>in prizes</p> 
-              </div>
-
-            </div> -->
-          <!-- </div> -->
+          <!-- Динамічне завантаження даних -->
         </div>
       </div>
 
@@ -195,68 +141,6 @@
         </div>
 
       </div>
-    </section>
-    <!-- <h1>My applications</h1>
-    <section class="card-grid">
-      <div class="card-container">
-
-        <img class="hacaton-pic" src="images/image1.png">
-        <div class="info-container">
-          <p class="name">WcHacks</p>
-          <p class="date">Application created 15.02</p>
-          <p class="status">Process</p>
-          <button class="details-button">More</button>
-        </div>
-        <p class="rules">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus at iaculis dolor, nec
-          pulvinar magna. Etiam eu leo ut quam tempus consectetur. Etiam et sapien ac lacus commodo molestie.
-        </p>
-      </div>
-
-      <div class="card-container">
-        <img class="hacaton-pic" src="images/image6.png">
-        <div class="info-container">
-          <p class="name">Nova Hacks III</p>
-          <p class="date">Application created 03.06</p>
-          <p class="status">Process</p>
-          <button class="details-button">More</button>
-        </div>
-        <p class="rules">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. In ac turpis sit amet sapien posuere porttitor.
-          Quisque ultrices at magna ut pharetra. Morbi porttitor sodales dolor, id feugiat purus dignissim.
-        </p>
-      </div>
-
-      <div class="card-container">
-        <img class="hacaton-pic" src="images/image7.png">
-        <div class="info-container">
-          <p class="name">Cat Hacks</p>
-          <p class="date">Hackathon ended 18.12.2024</p>
-          <p class="status">3 place</p>
-          <button class="details-button">More</button>
-        </div>
-        <p class="rules">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. In ac turpis sit amet sapien posuere porttitor.
-          Quisque ultrices at magna ut pharetra. Morbi porttitor sodales dolor, id feugiat purus dignissim.
-        </p>
-      </div> -->
-
-    <!-- <div class="card">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus at iaculis dolor, nec pulvinar magna. Etiam eu leo ut quam tempus consectetur. Etiam et sapien ac lacus commodo molestie. Sed sodales erat dapibus, rhoncus mauris eget, laoreet velit. Duis a fringilla massa, et dignissim mi. Ut aliquam ex rhoncus augue interdum porttitor. Maecenas varius orci a leo viverra pretium. Mauris vel efficitur orci. Phasellus dui nisi, fringilla non libero non, facilisis iaculis velit. In at magna eleifend, iaculis massa sit amet, tincidunt risus. Donec dapibus libero lorem, ut varius ipsum malesuada vel. Fusce non venenatis nulla. Integer finibus neque ac.</p>
-        </div>
-
-        <div class="card">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus at iaculis dolor, nec pulvinar magna. Etiam eu leo ut quam tempus consectetur. Etiam et sapien ac lacus commodo molestie. Sed sodales erat dapibus, rhoncus mauris eget, laoreet velit. Duis a fringilla massa, et dignissim mi. Ut aliquam ex rhoncus augue interdum porttitor. Maecenas varius orci a leo viverra pretium. Mauris vel efficitur orci. Phasellus dui nisi, fringilla non libero non, facilisis iaculis velit. In at magna eleifend, iaculis massa sit amet, tincidunt risus. Donec dapibus libero lorem, ut varius ipsum malesuada vel. Fusce non venenatis nulla. Integer finibus neque ac.</p>
-        </div>
-
-        <div class="card">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus at iaculis dolor, nec pulvinar magna. Etiam eu leo ut quam tempus consectetur. Etiam et sapien ac lacus commodo molestie. Sed sodales erat dapibus, rhoncus mauris eget, laoreet velit. Duis a fringilla massa, et dignissim mi. Ut aliquam ex rhoncus augue interdum porttitor. Maecenas varius orci a leo viverra pretium. Mauris vel efficitur orci. Phasellus dui nisi, fringilla non libero non, facilisis iaculis velit. In at magna eleifend, iaculis massa sit amet, tincidunt risus. Donec dapibus libero lorem, ut varius ipsum malesuada vel. Fusce non venenatis nulla. Integer finibus neque ac.</p>
-        </div>
-
-        <div class="card">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus at iaculis dolor, nec pulvinar magna. Etiam eu leo ut quam tempus consectetur. Etiam et sapien ac lacus commodo molestie. Sed sodales erat dapibus, rhoncus mauris eget, laoreet velit. Duis a fringilla massa, et dignissim mi. Ut aliquam ex rhoncus augue interdum porttitor. Maecenas varius orci a leo viverra pretium. Mauris vel efficitur orci. Phasellus dui nisi, fringilla non libero non, facilisis iaculis velit. In at magna eleifend, iaculis massa sit amet, tincidunt risus. Donec dapibus libero lorem, ut varius ipsum malesuada vel. Fusce non venenatis nulla. Integer finibus neque ac.</p>
-        </div> -->
-
-
     </section>
   </main>
 
