--- a/rating.html
+++ b/rating.html
@@ -71,26 +71,12 @@
         </div>
 
         <div class="lboard_wrap">
-          <!-- Тут будуть динамічно завантажуватись дані -->
+          <!-- Тут динамічно завантажуватись дані -->
         </div>
+        
       </div>
     </div>
 
-    
-    <!-- <section>
-      <table>
-        <thead>
-          <tr>
-            <th>Place</th>
-            <th>Name</th>
-            <th>Team name</th>
-            <th>Wins</th>
-            <th>Points</th>
-          </tr>
-        </thead>
-        <tbody id="ranking"></tbody>
-      </table>
-    </section> -->
   </main>
 
   <footer>
