--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
   <link rel="stylesheet" href="style/topbar.css">
   <link rel="stylesheet" href="style/home.css">
   <link rel="stylesheet" href="style/foooter.css">
-  <link rel="stylesheet" href="style/new_hachathos-card.css">
-  <!-- <link rel="stylesheet" href="style/hacaton-cards.css"> -->
+  <link rel="stylesheet" href="style/hachathos-card.css">
   <link rel="stylesheet" href="style/rating.css">
 
   <!-- Swiper CSS -->
@@ -166,7 +165,7 @@
         </div>
 
         <div class="lboard_wrap">
-          <!-- Тут будуть динамічно завантажуватись дані -->
+          <!-- Тут динамічно завантажуватись дані -->
         </div>
       </div>
     </div>
