--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <link rel="stylesheet" href="style/topbar.css">
   <link rel="stylesheet" href="style/home.css">
   <link rel="stylesheet" href="style/foooter.css">
-  <link rel="stylesheet" href="style/hachathos-card.css">
+  <link rel="stylesheet" href="style/hachathon-card.css">
   <link rel="stylesheet" href="style/rating.css">
 
   <!-- Swiper CSS -->
