--- a/person-account.html
+++ b/person-account.html
@@ -173,7 +173,7 @@
   </footer>
 
   <script src="js/hackathon-details.js"></script>
-  <script src="js/account_tabs.js"></script>
+  <script src="js/account.js"></script>
   <script src="js/toggle-menu.js"></script>
 </body>
 
