--- a/competition.html
+++ b/competition.html
@@ -66,36 +66,37 @@
     </div>
   </div>
   
-  <div id="sidenav" class="sidenav">
-    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-    <form>
-      <h2>Filter by Categories</h2>
-      <label>
-        <input type="checkbox">
-        Artificial Intelligence
-      </label>
-      <label>
-        <input type="checkbox">
-        Web Development
-      </label>
-      <label>
-        <input type="checkbox">
-        Blockchain
-      </label>
-      <label>
-        <input type="checkbox">
-        Databases
-      </label>
-      <label>
-        <input type="checkbox">
-        Gaming
-      </label>
-    </form>
-
-  </div>
-
   <main>
 
+    <div id="sidenav" class="sidenav">
+      <a class="closebtn" onclick="closeNav()">&times;</a>
+      <form>
+        <h2>Filter by categories</h2>
+        <label>
+          <input type="checkbox">
+          Artificial Intelligence
+        </label>
+        <label>
+          <input type="checkbox">
+          Web Development
+        </label>
+        <label>
+          <input type="checkbox">
+          Blockchain
+        </label>
+        <label>
+          <input type="checkbox">
+          Databases
+        </label>
+        <label>
+          <input type="checkbox">
+          Gaming
+        </label>
+      </form>  
+      <button class="searchbtn" onclick="closeNav()">Search</button>
+    </div>
+  
+  
     <!-- <div class="leftbar" id="sidenav">
       <div class="categories">
         <form>
