smooth transition for page, refactoring

--- a/competition.html
+++ b/competition.html
@@ -18,6 +18,7 @@
 </head>
 
 <body>
+  <!-- topbar -->
   <header>
     <nav class="nav-menu">
       <div class="home">
@@ -67,7 +68,6 @@
   </div>
   
   <main>
-
     <div id="sidenav" class="sidenav">
       <a class="closebtn" onclick="closeNav()">&times;</a>
       <form>
@@ -96,34 +96,6 @@
       <button class="searchbtn" onclick="closeNav()">Search</button>
     </div>
   
-  
-    <!-- <div class="leftbar" id="sidenav">
-      <div class="categories">
-        <form>
-          <h2>Filter by Categories</h2>
-          <label>
-            <input type="checkbox" name="category" value="ai">
-            Artificial Intelligence
-          </label><br>
-          <label>
-            <input type="checkbox" name="category" value="web">
-            Web Development
-          </label><br>
-          <label>
-            <input type="checkbox" name="category" value="blockchain">
-            Blockchain
-          </label><br>
-          <label>
-            <input type="checkbox" name="category" value="databases">
-            Databases
-          </label><br>
-          <label>
-            <input type="checkbox" name="category" value="gaming">
-            Gaming
-          </label>
-        </form>
-      </div>
-    </div> -->
 
     <div class="card-grid-competition">
       <div class="card">
@@ -165,10 +137,6 @@
           </a>
         </div>
       </div>
-      <!-- <p class="addres">Онлайн</p> -->
-      <!-- <div class="label">3 до кінця</div> -->
-      <!-- <p class="prize">&#36;<strong style="color: black;"> 15,500 </strong>in prizes</p> -->
-
 
       <div class="card">
         <div class="image-content">
@@ -285,7 +253,6 @@
     </div>
   </footer>
 
-  <!-- <script src="js/toggle-menu.js"></script> -->
   <script src="js/sidenav_competition.js"></script>
 </body>
 
