--- a/hackhaton-site-pattern.html
+++ b/hackhaton-site-pattern.html
@@ -22,7 +22,6 @@
     <nav class="nav-menu">
       <div class="home">
         <a href="index.html">
-          <!-- <img src="images/star.png"> -->
           <img src="https://live.staticflickr.com/124/337160380_f5681cab06_w.jpg">
           Home
         </a>
@@ -54,7 +53,7 @@
   <main>
 
     <div class="hackathon-detail-container" id="hackathon-detail-container">
-      <!-- Деталі хакатону завантажуються через JS -->
+      <!-- деталі хакатону завантажуються динамічно-->
     </div>
 
   </main>
