--- a/index.html
+++ b/index.html
@@ -38,18 +38,14 @@
   <link rel="stylesheet" href="style/foooter.css">
   <link rel="stylesheet" href="style/hachathon-card.css">
   <link rel="stylesheet" href="style/rating.css">
-
-  <!-- Swiper CSS -->
-  <!-- <link rel="stylesheet" href="style/swiper-bundle.min.css"> -->
-  <!-- <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css"> -->
 </head>
 
 <body>
+  <!-- topbar -->
   <header>
     <nav class="nav-menu">
       <div class="home">
         <a href="index.html">
-          <!-- <img src="images/star.png"> -->
           <img src="https://live.staticflickr.com/124/337160380_f5681cab06_w.jpg">
           Home
         </a>
@@ -95,7 +91,7 @@
     <h1>Popular hackathons</h1>
 
     <section>
-      <div class="card-grid"> 
+      <div class="card-grid">
         <div class="card">
           <div class="image-content">
             <span class="overlay"></span>
@@ -108,8 +104,7 @@
             <p class="rules">Lorem, ipsum dolor sit amet consectetur adipisicing elit. At iste aperiam deserunt
               obcaecati consequatur enim natus. Corporis dolores nihil, minima omnis distinctio sunt dicta,
               dignissimos doloremque cupiditate ullam esse vero.</p>
-              <button class="button"><a href="hackhaton-site-pattern.html?id=1">View more</a></button>
-              <!-- <button class="button">View more</button> -->
+            <button class="button"><a href="hackhaton-site-pattern.html?id=1">View more</a></button>
           </div>
         </div>
 
@@ -126,8 +121,7 @@
             <p class="rules">Lorem, ipsum dolor sit amet consectetur adipisicing elit. At iste aperiam deserunt
               obcaecati consequatur enim natus. Corporis dolores nihil, minima omnis distinctio sunt dicta,
               dignissimos doloremque cupiditate ullam esse vero.</p>
-              <button class="button"><a href="hackhaton-site-pattern.html?id=2">View more</a></button>
-              <!-- <button class="button"><a>View more</button> -->
+            <button class="button"><a href="hackhaton-site-pattern.html?id=2">View more</a></button>
           </div>
         </div>
 
@@ -143,8 +137,7 @@
             <p class="rules">Lorem, ipsum dolor sit amet consectetur adipisicing elit. At iste aperiam deserunt
               obcaecati consequatur enim natus. Corporis dolores nihil, minima omnis distinctio sunt dicta,
               dignissimos doloremque cupiditate ullam esse vero.</p>
-              <button class="button"><a href="hackhaton-site-pattern.html?id=3">View more</a></button>
-            <!-- <button class="button">View more</button> -->
+            <button class="button"><a href="hackhaton-site-pattern.html?id=3">View more</a></button>
           </div>
         </div>
       </div>
@@ -165,7 +158,7 @@
         </div>
 
         <div class="lboard_wrap">
-          <!-- Тут динамічно завантажуватись дані -->
+          <!-- динамічно завантажуватись дані -->
         </div>
       </div>
     </div>
@@ -201,16 +194,12 @@
 
 
   <script src="js/rating.js"></script>
-
 </body>
 
-<!-- Swiper JS -->
-<script src="js/swiper-bundle.min.js"></script>
 
-<!-- JavaScript -->
-<script src="js/main.js"></script>
 
 </html>
+
 <!-- 
 Цей сайт дає змогу знайти хакатон який вас цікавить.
         Хакатон - це захід, під час якого різні спеціалісти в галузі розробки програмного забезпечення інтенсивно й
