--- a/rating.html
+++ b/rating.html
@@ -8,7 +8,6 @@
 
   <link rel="stylesheet" href="style/general.css">
   <link rel="stylesheet" href="style/topbar.css">
-  <link rel="stylesheet" href="style/hacaton-cards.css">
   <link rel="stylesheet" href="style/rating.css">
   <link rel="stylesheet" href="style/foooter.css">
 
@@ -71,7 +70,7 @@
         </div>
 
         <div class="lboard_wrap">
-          <!-- Тут динамічно завантажуватись дані -->
+          <!-- динамічно завантажуватись дані -->
         </div>
         
       </div>
