--- a/index.html
+++ b/index.html
@@ -20,7 +20,14 @@
 1. Використати цикл forEach для генерації списку учасників у рейтингу.
 2. Додати кнопку "Подати заявку", яка змінює стиль після натискання та додає
 користувача до списку учасників.
-3. Реалізувати таймер до завершення хакатону, що оновлюється в реальному часі. -->
+3. Реалізувати таймер до завершення хакатону, що оновлюється в реальному часі. 
+
+лабораторна робота 3
+1. Створити компоненти для картки хакатону, списку учасників та результатів.
+2. У компоненті "Змагання" реалізувати фільтрацію за категоріями (штучний інтелект, 
+веб-розробка, кібербезпека тощо).
+3. Реалізувати маршрутизацію між сторінками без перезавантаження сторінки 
+браузера -->
 
 <head>
   <title>Hackathons</title>
