--- a/my-react-app/public/index.html
+++ b/my-react-app/public/index.html
@@ -38,18 +38,14 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-
-  <link rel="stylesheet" href="style/general.css">
-  <link rel="stylesheet" href="style/topbar.css">
-  <link rel="stylesheet" href="style/home.css">
-  <link rel="stylesheet" href="style/foooter.css">
-  <link rel="stylesheet" href="style/hachathon-card.css">
-  <link rel="stylesheet" href="style/rating.css">
+  
 </head>
 
 <body>
   <!-- topbar -->
-  <header>
+  
+  <!-- <header>
+
     <nav class="nav-menu">
       <div class="home">
         <a href="index.html">
@@ -79,10 +75,13 @@
 
       </ul>
     </nav>
-  </header>
+  </header> -->
 
-  <main>
-    <section class="about-us">
+  
+  <div id="root"></div>
+    <!-- <div id="card-grid"></div> -->
+
+    <!-- <section class="about-us">
       <div class="info">
         <h1>About us</h1>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam, dolorum. Minus nostrum, deleniti harum
@@ -92,10 +91,10 @@
       <div class="image">
         <img src="https://live.staticflickr.com/124/337160380_f5681cab06_w.jpg">
       </div>
-      <!-- <img class="logo" src="https://live.staticflickr.com/124/337160380_f5681cab06_w.jpg"> -->
-    </section>
+      <!-- <img class="logo" src="https://live.staticflickr.com/124/337160380_f5681cab06_w.jpg">
+    </section> -->
 
-    <h1>Popular hackathons</h1>
+    <!-- <h1>Popular hackathons</h1>
 
     <section>
       <div class="card-grid">
@@ -148,59 +147,22 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
-    <h1>Leaderboard</h1>
+    <!-- <h1>Leaderboard</h1>
 
-    <div class="wrapper">
-      <div class="lboard_section">
-        <div class="lboard_tabs">
-          <div class="tabs">
-            <ul>
-              <li data-li="today">Today</li>
-              <li class="active" data-li="month">Month</li>
-              <li data-li="year">Year</li>
-            </ul>
-          </div>
-        </div>
-
-        <div class="lboard_wrap">
-          <!-- динамічно завантажуватись дані -->
-        </div>
-      </div>
-    </div>
-
-  </main>
-
-  <footer>
-    <div class="inner-footer">
-      <div class="foooter-third">
-        <div class="logo-container">
-          <img src="images/star.png">
-        </div>
-      </div>
-
-      <div class="footer-third">
-        <h1>USEFUL LINKS</h1>
-        <a href="#">About</a>
-        <a href="#">Services</a>
-        <a href="#">Contact</a>
-        <a href="#">Shop</a>
-        <a href="#">Blog</a>
-      </div>
-
-      <div class="footer-third">
-        <h1>CONTACT</h1>
-        <a href="#">INST: marta</a>
-        <a href="#">FB: marta</a>
-        <a href="https://github.com/irlknn" target="_blank">Github: irlknn</a>
-        <p>© 2025 site</p>
-      </div>
-    </div>
-  </footer>
+    <div id="leaderboard" class="wrapper">
+      <!-- динамічно завантажуватись дані 
+    </div> -->
 
 
-  <script src="js/rating.js"></script>
+  <!-- <footer id="footer">
+  </footer> -->
+
+
+  <!-- <script src="js/rating.js"></script> -->
+  
+  <script src="src/index.jsx" type="module"></script>
 </body>
 
 
